--- a/_pages/DOL.html
+++ b/_pages/DOL.html
@@ -1,17 +1,18 @@
 ---
 layout: post
-title:  "【巨长帖】【全专歌词解析】《Dreaming Out Loud》"
-date:   2021-06-05 23:08:41 +0800
-image: DOL.jpg
-description: 解析Dreaming Put Loud全专歌词
+title:  【更新中】【全专歌词解析】《Dreaming Out Loud》
+permalink: /DOL/
 ---
 Hi,I'm Alex.这一分区我将研读OneRepublic的专辑《Dreaming Out Loud》的全部歌词。 
+
 我挖了一个大坑，我知道。
 
 乐队简介：
+
 OneRepublic是来自科罗拉多斯普林斯的一支流行摇滚乐队，于2002年创建。他们的歌曲风格是流行+抒情+激昂。
 
 乐队成员：
+
 主唱|Ryan Tedder (2002-至今) 担任乐队的人声、键盘、节奏吉他和打击乐。
 
 吉他|Zach Filkins（2002-至今）担任乐队的首席吉他、中提琴、伴唱
@@ -24,16 +25,17 @@ OneRepublic是来自科罗拉多斯普林斯的一支流行摇滚乐队，于200
 
 键盘|Brian Willett（2012-至今）担任乐队的键盘、鼓手、打击乐、伴唱
 
-乐队照片：
 
 专辑简介：
+
 ![alt jpg](../dolcd.jpg)
+
 此专为OneRepublic的首张专辑，由Interscope Records发行于9.20.2007。这张专辑里收录了乐队早期的许多名曲，如《Apologize》《All Fall Down》。整专的风格偏向为柔情+激昂，比较适合平时听欧美抒情的人。
 
 曲目一览（点击跳转单曲歌词赏析）
 
 标准版本：  
-1.[Say(All I Need)](#aa)  
+1.[Say(All I Need)](#aa)   
 2.[Mercy](#bb)  
 3.Stop and Stare  
 4.Apologize  
