--- a/_pages/DOL.html
+++ b/_pages/DOL.html
@@ -3,9 +3,9 @@ layout: post
 title:  【更新中】【全专歌词解析】《Dreaming Out Loud》
 permalink: /DOL/
 ---
-Hi,I'm Alex.这一分区我将研读OneRepublic的专辑《Dreaming Out Loud》的全部歌词。 
+Hi,I'm Alex.这一分区为OneRepublic的专辑《Dreaming Out Loud》的全部歌词。 
 
-我挖了一个大坑，我知道。
+Read Below ↓
 
 乐队简介：
 
