--- a/_pages/Singles单曲合集.html
+++ b/_pages/Singles单曲合集.html
@@ -8,12 +8,9 @@ Hi,I'm Alex.这里是欧美单曲内容总合。
 （更新：2021.7.8）
 
 ---
-layout: post
-title:  "Wrecked-Imagine Dragons"
-date:   2021-07-02 11:44:00
-img: wrecked-imagine drgaons.jpg
-description: 梦龙发新歌了 自己做的翻译+赏析
----
+Wrecked-Imagine Dragons
+
+![alt jpg](..\assets\img\wreckedimaginedrgaons.jpg)
 
 Translated by Alex (2021.07.02)
 
