--- a/_pages/DOL.html
+++ b/_pages/DOL.html
@@ -37,10 +37,10 @@ OneRepublic是来自科罗拉多斯普林斯的一支流行摇滚乐队，于200
 
 标准版本：  
 1.[Say(All I Need)](#aa) 
-2.[Mercy](#bb)  
-3.Stop and Stare(#cc)
-4.Apologize
-5.Goodbye, Apathy
+2.[Mercy](#bb) 
+3.[Stop and Stare](#cc) 
+4.Apologize 
+5.Goodbye, Apathy 
 6.All Fall Down  
 7.Tyrant  
 8.Prodigal  
