--- a/_pages/talk.html
+++ b/_pages/talk.html
@@ -3,7 +3,13 @@ layout: post
 title:  【永久更新】【音乐杂谈】
 permalink: /talk/
 ---
-我与梦龙乐队-Imagine Dragons and Me.
+文章目录：（点击阅读）
+
+一、[我与梦龙乐队-Imagine Dragons and Me.](#aa) 
+
+---
+
+### <a name="cc"></a> 我与梦龙乐队-Imagine Dragons and Me.
 
 再过五天，即是梦龙四专Origins的首单Natural发行之日三周年。
 
@@ -15,7 +21,7 @@ MV on Youtube:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0I647GU3Jsc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 MV on Bilibili:
-<iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=30303056&bvid=BV1YW411D77x&cid=52856180&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=69967970&bvid=BV1jE411X7c6&cid=121207451&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 我理所应当地翻了梦龙乐队的歌曲列表，听力他们的另一首歌曲：《Demons》。副歌部分大丹激昂又抒情的呐喊彻底打动了我的心灵。It's where my demons hide. It's where my demons hide...
 
