--- a/_pages/Albums.html
+++ b/_pages/Albums.html
@@ -1,19 +1,31 @@
 ---
 layout: post
-title:  【更新中】【全专歌词解析】《Dreaming Out Loud》
-permalink: /DOL/
+title:  【更新中】【单曲歌词+赏析】【欧美】
+permalink: /Albums/
 ---
-Hi,I'm Alex.这一分区为OneRepublic的专辑《Dreaming Out Loud》的全部歌词翻译+赏析。 
+
+Hi,I'm Alex.这里是欧美专辑 歌词+解析 内容总合。
+（更新：2021.7.8）
+
+目录：
+
+1.[《Dreaming Out Loud》-OneRepublic 2007](#aa1)
+2.[《Waking Up》-OneRepublic 2009](#bb2)
+
+---
+
+---
+## <a name="aa1"></a>【巨长帖】【全专歌词解析】《Dreaming Out Loud》
+
+这一分区为OneRepublic的专辑《Dreaming Out Loud》的全部歌词翻译+赏析。 
 翻译与赏析均为本人制作。
 
 Read Below ↓
 
 乐队简介：
-
 OneRepublic是来自科罗拉多斯普林斯的一支流行摇滚乐队，于2002年创建。他们的歌曲风格是流行+抒情+激昂。
 
 乐队成员：
-
 主唱|Ryan Tedder (2002-至今) 担任乐队的人声、键盘、节奏吉他和打击乐。
 
 吉他|Zach Filkins（2002-至今）担任乐队的首席吉他、中提琴、伴唱
@@ -26,21 +38,20 @@ OneRepublic是来自科罗拉多斯普林斯的一支流行摇滚乐队，于200
 
 键盘|Brian Willett（2012-至今）担任乐队的键盘、鼓手、打击乐、伴唱
 
+乐队照片：
 
 专辑简介：
-
 ![alt jpg](..\assets\img\dolcd.jpg)
-
-此专为OneRepublic的首张专辑，由Interscope Records发行于9.20.2007。这张专辑里收录了乐队早期的许多名曲，如《Apologize》《All Fall Down》。整专的风格偏向为柔情+激昂，比较适合平时听欧美抒情的人。
+此专为OneRepublic的首张专辑（Debut Album），由Interscope Records发行于9.20.2007。这张专辑里收录了乐队早期的许多名曲，如《Apologize》《All Fall Down》。整专的风格偏向为柔情+激昂，比较适合平时听欧美抒情的人。
 
 曲目一览（点击跳转单曲歌词赏析）
 
 标准版本：  
-1.[Say(All I Need)](#aa) 
-2.[Mercy](#bb) 
-3.[Stop and Stare](#cc) 
-4.Apologize 
-5.Goodbye, Apathy 
+1.[Say(All I Need)](#aa)  
+2.[Mercy](#bb)  
+3.[Stop and Stare](#cc)  
+4.Apologize  
+5.Goodbye, Apathy  
 6.All Fall Down  
 7.Tyrant  
 8.Prodigal  
@@ -280,7 +291,7 @@ Just say?
 
 如果你也在生活中经历理想与现实的矛盾，此歌与你共勉。
 
-### <a name="bb"></a> Mercy
+### <a name="aa"></a> Mercy
 
 MV on Youtube
 
@@ -519,7 +530,6 @@ Whoa whoa whoa
 歌中也说：
 
 “
-
     A tragedy, it seemed to be over now
 
     这场悲剧 似乎已结束了
@@ -697,4 +707,12 @@ Oh, do you see what I see?
 铁钩，总想把我们钩回过去的深渊。
 
 词曲作者鼓励每一个人抛弃过去，突破自我内心，活好当下，成为新的自己 I'll become what I can't be.
+
+---
+
+## <a name="aa1"></a>【巨长帖】【全专歌词解析】《Waking Up》
+
+正在开发中~
+
+
 
