--- a/_pages/Movies.html
+++ b/_pages/Movies.html
@@ -69,7 +69,7 @@ permalink: /Movies/
 
 
 
-其二，这本电影虽归入恐怖片，却几乎没有什么吓人的jump scare（除了0：26：51的废弃仓库里汽车中装于罐中的人头和紧挨在之前的无头雕塑片段，仅此而已，倘若开了弹幕你反而会笑出声）。虽然如此，全片的悬疑氛围渲染地很浓，而且片尾的和史达琳和比尔的final枪战也很紧张刺激。非常遗憾的是，我由于先前抱着“不准备看原片”的心态看完了有关这本电影的详细情节解说，失去了一份大大的刺激。
+其二，这本电影虽归入恐怖片，却几乎没有什么吓人的jump scare（除了0：26：51的废弃仓库里汽车中装于罐中的人头和紧挨在之前的无头雕塑片段，仅此而已，倘若开了弹幕你反而会笑出声）。虽然如此，全片的悬疑氛围渲染地很浓，而且片尾的和史达琳和比尔的final枪战也很紧张刺激。
 
 其三，有人说结尾太“个人英雄主义”，然而却是电影线索以及剧情导致的必然性，即史达琳的枪速（原著中提到，史达琳持手枪射击速度是，左手每分钟74次，右手每分钟90次。这还是边聊天边开枪的成绩。她的射击速度远超FBI的平均水平 信息来自：逐年追影 ）以及汉尼拔设下的考验（否则前者就会被逃离精神病院的汉尼拔“参门拜访”，成为他的晚餐）。
 
