--- a/_pages/Albums.html
+++ b/_pages/Albums.html
@@ -17,7 +17,7 @@ Hi,I'm Alex.这里是欧美专辑 歌词+解析 内容总合。
 ---
 ## <a name="aa1"></a>【巨长帖】【全专歌词解析】《Dreaming Out Loud》
 
-这一分区为OneRepublic的专辑《Dreaming Out Loud》的全部歌词翻译+赏析。 
+Hi,I'm Alex.这一分区为OneRepublic的专辑《Dreaming Out Loud》的全部歌词翻译+赏析。 
 翻译与赏析均为本人制作。
 
 Read Below ↓
@@ -47,45 +47,45 @@ OneRepublic是来自科罗拉多斯普林斯的一支流行摇滚乐队，于200
 曲目一览（点击跳转单曲歌词赏析）
 
 标准版本：  
-1.[Say(All I Need)](#aa)  
-2.[Mercy](#bb)  
-3.[Stop and Stare](#cc)  
-4.Apologize  
-5.Goodbye, Apathy  
-6.All Fall Down  
-7.Tyrant  
-8.Prodigal  
-9.Won't Stop  
-10.All We Are  
-11.Some to Save You  
-12.Come Home  
-13.Apologize(remix)  
+1.[Say(All I Need) 且言（我所需要的）](#aa) 
+2.[Mercy 怜悯](#bb)  
+3.[Stop and Stare 驻足 远望](#cc) 
+4.[Apologize 道歉](#dd) 
+5.[Goodbye, Apathy 再见，冷漠](#ee) 
+6.[All Fall Down 轰然倒塌](#ff) 
+7.Tyrant 
+8.Prodigal 
+9.Won't Stop 
+10.All We Are 
+11.Some to Save You 
+12.Come Home 
+13.[Apologize(remix)](#dd) 
 
 PAL Bonus Track：  
-Dreaming Out Loud
-Apologize(remix)  
+Dreaming Out Loud 
+Apologize(remix) 
 
-附加：（其余全部版本）  
+附加：（其余全部版本） 
 Something's Not Right Here   
-Hearing Voices  
-Sleep (Remix)  
-Stop and Stare (Live video)  
-Apologize (Live video)  
-All Fall Down (Live video)  
-All We Are (Original version)  
-Too Easy (included in the "Stop and Stare" 3 Hit Pack on iTunes)  
-Trap Door  
-Sleep (Non-LP Version)  
-Come Home (featuring Sara Bareilles)  
-Mercy (Radio 1 Live Lounge)(Duffy cover)  
-All Fall Down (Live @ The Orange Lounge)  
+Hearing Voices 
+Sleep (Remix) 
+Stop and Stare (Live video) 
+Apologize (Live video) 
+All Fall Down (Live video) 
+All We Are (Original version) 
+Too Easy (included in the "Stop and Stare" 3 Hit Pack on iTunes) 
+Trap Door 
+Sleep (Non-LP Version) 
+Come Home (featuring Sara Bareilles) 
+Mercy (Radio 1 Live Lounge)(Duffy cover) 
+All Fall Down (Live @ The Orange Lounge) 
 All We Are (Live @ The Orange Lounge) 
 
   
 
   
   
-### <a name="aa"></a> Say(All I Need) 
+### <a name="aa"></a> Say(All I Need) 且言（我所需要的）
 （2021 7.2更新）
 MV On Youtube: 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/GRSZpV6WIuU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -291,7 +291,7 @@ Just say?
 
 如果你也在生活中经历理想与现实的矛盾，此歌与你共勉。
 
-### <a name="aa"></a> Mercy
+### <a name="aa"></a> Mercy 怜悯
 
 MV on Youtube
 
@@ -543,7 +543,7 @@ Whoa whoa whoa
 这两句词也抒发了作词者本身的感慨，即唯有人生的跌宕起伏才填充丰富了一个人。
 
 
-### <a name="cc"></a> Stop and Stare
+### <a name="cc"></a> Stop and Stare 驻足 远望
 
 MV on Youtube:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/HtNS1afUOnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -707,6 +707,219 @@ Oh, do you see what I see?
 铁钩，总想把我们钩回过去的深渊。
 
 词曲作者鼓励每一个人抛弃过去，突破自我内心，活好当下，成为新的自己 I'll become what I can't be.
+
+### <a name="dd"></a> Apologize & Apologize Remix 道歉&道歉（Timbaland混音版本）
+
+注：Remix版本为Timbaland的混音作品，歌词一样，固两首放在一起讲。
+
+歌词翻译：
+
+I'm holding on your rope
+
+我曾紧握着你的绳子 十尺凌空
+
+Got me ten feet off the ground
+
+也不愿放手
+
+And I'm hearing what you say 
+
+我能听见你的言语
+
+but I just can't make a sound
+
+却哽咽无声
+
+You tell me that you need me
+
+你曾倾诉你需要我
+
+Then you go and cut me down, but wait
+
+却把我抛弃 远走高飞 回想————
+
+You tell me that you're sorry
+
+你曾表示歉意
+
+Didn't think I'd turn around, and say
+
+却不曾想到我会转身离去 且言
+
+That it's too late to apologize, it's too late
+
+道歉为时已晚 一切无法补救
+
+I said it's too late to apologize, it's too late
+
+且言 道歉为时已晚 一切无法回头
+
+I'd take another chance, take a fall
+
+我曾愿尝试 倾尽所有 赌上一切
+
+Take a shot for you
+
+只为了你
+
+And I need you like a heart needs a beat
+
+我曾如心脏渴望跳动一般 渴望你的爱
+
+But it's nothing new, yeah, yeah
+
+但一切已再无新意
+
+I loved you with a fire red
+
+我曾狂热地爱着你
+
+Now it's turning blue, and you say
+
+冰冷浇灭热情 你却
+
+Sorry like the angel heaven let me think was you
+
+像一个天使 向我道歉 试图回转我的心意
+
+But I'm afraid
+
+但恐怕
+
+It's too late to apologize, it's too late
+
+道歉为时已晚 一切无法补救
+
+I said it's too late to apologize, it's too late, whoa
+
+且言 道歉为时已晚 一切无法回头
+
+It's too late to apologize, it's too late
+
+道歉为时已晚 一切无法弥补
+
+I said it's too late to apologize, it's too late
+
+且言 道歉为时已晚 一切无法复初
+
+I said it's too late to apologize, yeah
+
+且言 道歉为时已晚 一切无法补救
+
+I said it's too late to apologize, yeah
+
+且言 道歉为时已晚 一切无法回头
+
+I'm holding on your rope, got me ten feet off the ground
+
+我曾紧握着你的绳子 十尺凌空 也不愿...
+
+歌词赏析：
+
+爱无法弥补，伤痕也永远存在。迟来的道歉是无法挽救爱情的。
+
+借此曲之手，Ryan Tedder想告诉我们这样一个道理。
+
+### <a name="ee"></a> Goodbye, Apathy 再见，冷漠
+
+I can't sleep, no not like I used to
+
+我无法如往常一般 安然入睡
+
+I can't breathe in and out like I need to
+
+不能自由吐息
+
+It's breaking ice now to make any movement
+
+深陷囹圄 难以取得新的突破
+
+What's your vice? You know that mine's the illusion
+
+你的缺点是什么？ 我只知我的 就是陷入幻想
+
+All at once (As I'm trying)
+
+只需一步(我在尝试)
+
+I can help you out (Just to keep things right)
+
+我能帮助你脱离苦海 (只需维持一切 )
+
+I'll be what you need (I kill myself to make everything perfect for you)
+
+我将成为你所需要的 (尽心全力 让你变得完美)
+
+I'll do anything
+
+我宁愿付出一切
+
+Goodbye apathy
+
+再见了 冷漠
+
+So long, apathy
+
+永别了 冷漠
+
+So don't sit still
+
+
+Don't you move away from here
+
+So goodbye apathy
+(As I'm trying)
+So long fancy free
+(Just to keep things right)
+Goodbye apathy, I don't wanna be you
+(Kill myself to make everything perfect for you)
+
+I don't walk right, not like I used to
+There's a jump in my step as I rush to see you
+I could be happy here as long as you're near to me
+As long as you're close to me
+
+Now that I'm alright
+(As I'm trying)
+I can help you out
+(Just to keep things right)
+I'll be what you need, I'll do anything
+(I kill myself to make everything perfect for you)
+Goodbye apathy, so goodbye apathy
+
+So don't you stop pushing me
+I can take so much
+
+So goodbye apathy
+(As I'm trying)
+So long fancy free
+(Just to keep things right)
+Goodbye apathy, I don't wanna be you
+(Kill myself to make everything perfect for you)
+
+Everybody is watching you
+Everybody is watching me too
+Everybody is watching you
+Everybody is watching me too
+(I can't sleep)
+
+Everybody is watching you
+(No)
+Everybody is watching me too
+(Not like I used to)
+Everybody is watching you
+(I can't breathe in)
+Everybody is watching me too
+(Not like I need to)
+
+Everybody is watching you
+(It's breaking ice now to make any movement)
+Everybody is watching me too
+Everybody is watching you
+(What's your vice?)
+Everybody is watching me too
+(You know that mine's the illusion)
+
 
 ---
 
