--- a/_pages/talk.html
+++ b/_pages/talk.html
@@ -7,6 +7,7 @@ permalink: /talk/
 
 一、[我与梦龙乐队-Imagine Dragons and Me.](#aa) 
 
+二、[林肯公园早期成军史-Early History of Linkin Park.](#bb)
 ---
 
 ### <a name="cc"></a> 我与梦龙乐队-Imagine Dragons and Me.
@@ -47,5 +48,54 @@ MV on Bilibili:
 
 
 
-写于2021.7.12 02:40:12 .
+写于2021.7.12
 By 陈嘉纬.
+
+---
+
+<a name="bb"></a>>林肯公园早期成军史-Early History of Linkin Park.
+
+(本文内容素材来源为 <a href="https://en.wikipedia.org/wiki/Linkin_Park">维基百科英文主页</a>，Alex本人结合翻译和改编而得。
+
+Linkin Park，中文译名为“林肯公园”，是一个来自加州阿古拉山的摇滚乐队。他们的历史可以要从1996年讲起。
+
+1996年，Mike Shinoda，Rob Bourdon 和 Brad Delson 是阿古拉山高中的校友。他们于毕业之后开始组建乐队，招募了Joe Hahn, Dave Michael Farrell 以及 乐队主唱Mark Wakefield。他们给乐队取名为Xero。乐队成员们以Mike Shinoda的寝室为临时根据地，整出了第一张包含4首歌曲的demo《Xero》，可以在国内的音乐软件搜到。
+
+Mark Wakefield虽然被许多人认为音色和唱功不如后主唱好，但也参与了乐队早期的许多音乐创作。比如他写的一首歌《Runaway》就是我的最爱之一。
+
+然而，由于乐队在这几年一直失败于与唱片公司签约并拿到商标，焦急与压力充斥着乐队的前景。主唱Mark Wakefield离开了乐队去寻求其他机会。Dave Michael Farrell 也离开乐队去加入Tasty Snax。
+
+在此之后， Chester Bennington由 Zomba Music的副总裁 Jeff Blue推荐，并因其多变的嗓音特点被招募进乐队。后乐队改名为Hybrid Theory。Mike的说唱与Chester的嗓音发生了奇妙的化学反应。在Jeff Blue的帮助下(当时竟成为了华纳唱片Waner Bros.Records 的总裁)，乐队成功与华纳唱片于1999年签约，拿下了A&R的商标。为避免与当红乐队Hybrid搞混，乐队改名为Linkin Park，即保留至今的最终名称。
+
+Linkin Park这一名字的由来很有意思。在改名之际，乐队曾考虑过多个名字：Plear(同play，可译角色或乐器) 以及 Platinum Lotus Foundation(白金莲基地)。最终他们敲定改名为Lincoln Park，但为了获得linkinpark.com的域名才更名为Linkin Park。是不是很草？但这也体现了互联网力量的强大。(我们熟悉的美国总统林肯英文名为 Lincoln而非Linkin，会有人搞混)。
+
+值得一提的是，Mike 和Chesetr都在采访中提出，当时的 A&R 唱片商标公司对于乐队嘻哈与摇滚的混搭颇为不满，甚至想让Chester开除Mike，做纯摇滚音乐。然而Chester不愿屈服并坚守乐队的音乐风格，事实证明这一抉择是无比明智的。
+
+2000年，Farrel回归。同年，Linkin Park的首张专辑《Hybrid Theory》发布。这张专辑突破全球2700万销量，成为21世纪最成功的的摇滚专辑，让Linkin Park一跃火爆全球。
+
+以下是我心目中的林肯公园Top 10：
+
+1.In the End
+
+2.New Divide
+
+3.Numb
+
+4.Breaking the Habit
+
+5.The Catalyst
+
+6.My December
+
+7.What I've Done
+
+8.Iridescent
+
+9.Crawling
+
+10.Faint
+
+谨此纪念 Linkin Park主唱 Chester Bennington (1976.3.20-2017.7.20)。愿天堂一切安好。
+
+写于 2021.7.24
+By 陈嘉纬
