--- a/_pages/talk.html
+++ b/_pages/talk.html
@@ -8,6 +8,7 @@ permalink: /talk/
 一、[我与梦龙乐队-Imagine Dragons and Me.](#aa) 
 
 二、[林肯公园早期成军史-Early History of Linkin Park.](#bb)
+
 ---
 
 ### <a name="cc"></a> 我与梦龙乐队-Imagine Dragons and Me.
@@ -53,7 +54,7 @@ By 陈嘉纬.
 
 ---
 
-<a name="bb"></a>>林肯公园早期成军史-Early History of Linkin Park.
+### <a name="bb"></a>林肯公园早期成军史-Early History of Linkin Park.
 
 (本文内容素材来源为 <a href="https://en.wikipedia.org/wiki/Linkin_Park">维基百科英文主页</a>，Alex本人结合翻译和改编而得。
 
