--- a/_pages/Movies.html
+++ b/_pages/Movies.html
@@ -13,7 +13,7 @@ permalink: /Movies/
 
 二、[【深度长评】《沉默的羔羊》（The Silence of the Lambs） 1991 犯罪·惊悚](#bb)
 
-三、[【深度长评】《楚门的世界》（The Truman Show） 1998 剧情·科幻）](#cc)
+三、[【深度长评】《楚门的世界》（The Truman Show） 1998 剧情·科幻](#cc)
 
 ---
 
