--- a/_pages/subscribe.html
+++ b/_pages/subscribe.html
@@ -11,7 +11,7 @@ permalink: /subscribe/
 
 订阅方式：
 
-1.发送电子邮件至博客官方邮箱“<alexblog class="github io"></alexblog>” 
+1.发送电子邮件至博客官方邮箱“alexmblog@163.com” 
 （邮件标题：Subscribe AXMC 邮件正文内容：备注昵称+你兴趣倾向的前三名乐队或歌手，仅限欧美）
 
 2.等待Alex本人在24小时内回复确认，订阅成功。
