--- a/_pages/singles.html
+++ b/_pages/singles.html
@@ -6,9 +6,12 @@ permalink: /singles/
 这里收录了所有Alex更新的单曲翻译和赏析，
 
 目录：
-
-1.[Wrecked-Imagine Dragons 2021](#aa1) 
+5.[Flares-The Script 2014](#ee5)
+4.[The Messenger-Linkin Park 2010](#dd4)
+3.[Instant crush-Daft Punk 2013](#cc3)
 2.[Walking the Wire-Imagine Dragons 2017](#bb2) 
+1.[Wrecked-Imagine Dragons 2021](#aa1) 
+
 
 ---
 
@@ -474,3 +477,396 @@ We're walking the wire, wire, wire
 这一段翻译是我自己加上去的。其意就是：在克服了诸多困难险阻后，双方仍能够保留爱情初始的芳心，但困难毕竟是循环轮回，因此爱情就是在无数个起点之间反复徘徊的旅程，每一次都会回到“一切的起点”。
 
 
+## <a name="cc3"></a> Walking the Wire-Imagine Dragons 2017
+
+![alt jpg](..\assets\img\instantcrush.jpg)
+
+Daft Punk是一支来自法国的电子音乐双人组，成立于1993年。其音乐风格对电子舞曲领域产生了巨大影响。
+
+最初乐队两人于1992年创立一个独立摇滚乐队，并取名为"Darlin'"，即Beach Boys的一首歌。其一首作品被杂志Melody Maker吐槽为"一首愚蠢的朋克鞭挞乐歌曲"(a daft punky thrash)。于是他们改名为"Daft Punk"，抛弃吉他，拾起了唱机、音序机和采样器，做起了浩室电子音乐。
+
+这首"Instant Crush"收录自他们2013年的专辑《Ramdom Acess Memories》。这张专辑收录了格莱美年度制作"Get Lucky"，包揽了第56届格莱美奖年度专辑、最佳电子舞曲专辑，拿下了他们音乐历程的巅峰成绩。
+
+2021年2月22日，Daft Punk宣布解散，并发布了短片Epilogue，片中，Thomas机器人定时爆炸，Guy Maneul在夕阳的背景下渐行渐远，宣告了乐队28年音乐历程的终结。
+
+MV on Youtube:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/a5uQMwRMHcs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+MV on Bilibili:
+
+<iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=80325673&bvid=BV1SJ411s7WG&cid=137462354&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+歌词自制翻译：（几句借鉴了网易云的翻译）
+
+[跳至赏析](#sx1)
+
+(Translated by Alex 2021.9.5)
+
+I didn't want to be the one to forget
+
+我不想成为忘却过去之人
+
+I thought of everything I'd never regret
+
+回顾过往 不存任何遗憾
+
+A little time with you is all that I get
+
+与你相伴的一点点日子是我的唯一一切
+
+That's all we need because it's all we can take
+
+这是我们仅需要的 因为仅此我们得以承受
+
+One thing I never see the same when your 'round
+
+你在身旁 一件事我从未看清
+
+I don't believe in him — his lips on the ground
+
+我不相信他的花言巧语
+
+I wanna take you to that place in the "Roche"
+
+想带你去一个Roche的地方
+
+But no one gives us any time anymore
+
+但已为时已晚 没有任何时间了
+
+He ask me once if I'd look in on his dog
+
+他问我能否照看一下他的狗
+
+You made an offer for it, then you ran off
+
+你抛下一个出价 离我远去
+
+I got this picture of us kids in my head
+
+我的脑海中浮现出我们孩子的模样
+
+And all I hear is the last thing that you said
+
+但我能所闻 仅是你的最后之词
+
+"I listened to your problems
+
+“我已经听够了你的痛苦”
+
+Now listen to mine"
+
+“现在来听听我的”
+
+I didn't want to anymore, oh oh oh
+
+我再也不愿回想了
+
+And we will never be alone again
+
+我们再也不会孤独
+
+'Cause it doesn't happen every day
+
+因为这种事不会每天发生
+
+Kinda counted on you being a friend
+
+想将你作为一个朋友
+
+Can I give it up or give it away
+
+我应该放弃 还是抛弃这种想法
+
+Now I thought about what I wanna say
+
+现在我思索着欲言之词
+
+But I never really know where to go
+
+但我仍不知心向何处
+
+So I chained myself to a friend
+
+所以我将自己和一个朋友捆在一起
+
+'Cause I know it unlocks like a door
+
+因为我知道情感束缚会因此而解开
+
+I didn't want to anymore, oh oh oh
+
+我再也不愿回想了
+
+And we will never be alone again
+
+我们再也不会孤独
+
+'Cause it doesn't happen every day
+
+因为这种事不会每天发生
+
+Kinda counted on you being a friend
+
+想将你作为一个朋友
+
+Can I give it up or give it away
+
+我应该放弃 还是抛弃这种想法
+
+Now I thought about what I wanna say
+
+现在我思索着欲言之词
+
+But I never really know where to go
+
+但我仍不知心向何处
+
+So I chained myself to a friend
+
+所以我将自己和一个朋友捆在一起
+
+Some more again
+
+诸此 反复
+
+It didn't matter what they wanted to see
+
+别人想看到的和我们无关
+
+He thought he saw someone that looked just like me
+
+他以为见到了一个像我的人
+
+The summer memory that just never dies
+
+永不消逝的夏天回忆
+
+We worked too long and hard to give it no time
+
+我们历尽千辛 时间所剩无几
+
+He sees right through me, it's so easy with lies
+
+他直直地看穿我 猜疑与谎言是多么容易
+
+Cracks in the road that I would try and disguise
+
+道上的裂痕 我会尝试去掩盖
+
+He runs his scissor at the seem in the wall
+
+他将剪刀插进墙上的裂缝中
+
+He cannot break it down or else he would fall
+
+他无法将其摧毁 否则他会坠落
+
+One thousand lonely stars hiding in the cold
+
+万千孤星隐于寒
+
+Take it, I don't wanna sing anymore
+
+接下 我再也不想歌颂了
+
+"I listened to your problems
+
+“我已经听够了你的痛苦”
+
+Now listen to mine"
+
+“现在来听听我的”
+
+I didn't want to anymore, oh oh oh
+
+我再也不愿回想了
+
+And we will never be alone again
+
+我们再也不会孤独
+
+'Cause it doesn't happen every day
+
+因为这种事不会每天发生
+
+Kinda counted on you being a friend
+
+想将你作为一个朋友
+
+Can I give it up or give it away
+
+我应该放弃 还是抛弃这种想法
+
+Now I thought about what I wanna say
+
+现在我思索着欲言之词
+
+But I never really know where to go
+
+但我仍不知心向何处
+
+So I chained myself to a friend
+
+所以我将自己和一个朋友捆在一起
+
+'Cause I know it unlocks like a door
+
+因为我知道情感束缚会因此而解开
+
+I didn't want to anymore, oh oh oh
+
+我再也不愿回想了
+
+And we will never be alone again
+
+我们再也不会孤独
+
+'Cause it doesn't happen every day
+
+因为这种事不会每天发生
+
+Kinda counted on you being a friend
+
+想将你作为一个朋友
+
+Can I give it up or give it away
+
+我应该放弃 还是抛弃这种想法
+
+Now I thought about what I wanna say
+
+现在我思索着欲言之词
+
+But I never really know where to go
+
+但我仍不知心向何处
+
+So I chained myself to a friend
+
+所以我将自己和一个朋友捆在一起
+
+'Cause I know it unlocks like a door
+
+因为我知道情感束缚会因此而解开
+
+And we will never be alone again
+
+我们再也不会孤独
+
+'Cause it doesn't happen every day
+
+因为这种事不会每天发生
+
+Kinda counted on you being a friend
+
+想将你作为一个朋友
+
+Can I give it up or give it away
+
+我应该放弃 还是抛弃这种想法
+
+Now I thought about what I wanna say
+
+现在我思索着欲言之词
+
+But I never really know where to go
+
+但我仍不知心向何处
+
+So I chained myself to a friend
+
+所以我将自己和一个朋友捆在一起
+
+'Cause I know it unlocks like a door
+
+因为我知道情感束缚会因此而解开
+
+I don't understand, don't get upset
+
+我不理解 不要悲伤
+
+I'm not with you
+
+我不在你这一边
+
+We're swimming around,
+
+我们四处飘荡
+
+It's all I do, when I'm with you
+
+这是我陪伴你时做的唯一一件事
+
+And we will never be alone again
+
+我们再也不会孤独
+
+'Cause it doesn't happen every day
+
+因为这种事不会每天发生
+
+Kinda counted on you being a friend
+
+想将你作为一个朋友
+
+Can I give it up or give it away
+
+我应该放弃 还是抛弃这种想法
+
+Now I thought about what I wanna say
+
+现在我思索着欲言之词
+
+But I never really know where to go
+
+但我仍不知心向何处
+
+So I chained myself to a friend
+
+所以我将自己和一个朋友捆在一起
+
+'Cause I know it unlocks like a door
+
+因为我知道情感束缚会因此而解开
+
+And we will never be alone again
+
+我们再也不会孤独
+
+'Cause it doesn't happen every day
+
+因为这种事不会每天发生
+
+Kinda counted on you being a friend
+
+想将你作为一个朋友
+
+Can I give it up or give it away
+
+我应该放弃 还是抛弃这种想法
+
+Now I thought about what I wanna say
+
+现在我思索着欲言之词
+
+But I never really know where to go
+
+但我仍不知心向何处
+
+So I chained myself to a friend
+
+所以我将自己和一个朋友捆在一起
+
+'Cause I know it unlocks like a door
+
+因为我知道情感束缚会因此而解开
+
+## <a name="sx1"></a> 歌曲赏析
+
+此歌的人声是Julian Casablancas。他是英伦摇滚乐队The Strokes的主唱，也参与了此曲的词曲创作。
+
+这首歌惊艳到我的还是它作为电子舞曲的一种 流畅的艺术感。流滑重复的曲调，嗫嚅的歌词似语非语，除去歌词或人声，它仍然是一件艺术品。
+
+歌曲名为"Instant Crush"，但歌曲反复阐述的感情再也不是一见钟情了，更是对过去感情的一种玩味和思念，以及对初相爱的那种感觉的怀念。
