--- a/_pages/singles.html
+++ b/_pages/singles.html
@@ -6,8 +6,7 @@ permalink: /singles/
 这里收录了所有Alex更新的单曲翻译和赏析，
 
 目录：
-5.[Flares-The Script 2014](#ee5)
-4.[The Messenger-Linkin Park 2010](#dd4)
+4.[Someday OneRepublic 2021](#dd4)
 3.[Instant crush-Daft Punk 2013](#cc3)
 2.[Walking the Wire-Imagine Dragons 2017](#bb2) 
 1.[Wrecked-Imagine Dragons 2021](#aa1) 
@@ -870,3 +869,232 @@ So I chained myself to a friend
 这首歌惊艳到我的还是它作为电子舞曲的一种 流畅的艺术感。流滑重复的曲调，嗫嚅的歌词似语非语，除去歌词或人声，它仍然是一件艺术品。
 
 歌曲名为"Instant Crush"，但歌曲反复阐述的感情再也不是一见钟情了，更是对过去感情的一种玩味和思念，以及对初相爱的那种感觉的怀念。
+
+
+## <a name="dd4"></a> Someday OneRepublic 2021
+
+![alt jpg](..\assets\img\human.jpg)
+
+OneRepublic的新专辑《Human》于2021.6.27中国时间凌晨发布。解析主打曲Someday。
+
+MV on Youtube:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vNfgVjZF8_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+MV on Bilibili:
+
+<iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=590160235&bvid=BV1sq4y1U7QP&cid=398281280&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+歌词翻译：
+
+[跳至赏析](#sx2)
+
+(Translated By Alex 2021.9.5)
+
+Somedays I'm treading the water and feel like it's getting deep
+
+一些日子 我涉入水中 感觉越陷越深
+
+Some nights I drown in the wade of the things that I think I need
+
+一些夜晚 我淹没在渴望的海洋里 无法呼吸
+
+Sometimes I feel incomplete, yeah
+
+一些时候 我感觉自己 残缺不全
+
+But you always say to me, say to me
+
+但你时常告诉我 告诉我
+
+Oh, you say someday when we're older
+
+你说 当未来的某一天 我们老去
+
+We'll be shinin' like we're gold, yeah
+
+我们会像金子一样闪耀
+
+Won't we? (Won't we?)
+
+不是吗？
+
+Won't we? (Won't we?)
+
+不是吗？
+
+Yeah, someday when we're older
+
+未来的某一天 我们老去
+
+I'll be yours, and you'll be mine
+
+我们将心比心
+
+Be happy (happy)
+
+无忧无虑
+
+Happy
+
+无忧无虑
+
+Oh, you say someday when we're older
+
+噢 你说 未来的某一天 我们老去
+
+We won't worry 'bout the things that We don't need (we don't need)
+
+我们不再担心身外之物
+
+We don't need
+
+身外之物
+
+Yeah, one day down the line
+
+某天 当那一刻来临
+
+Before we both run out of time
+
+在我们耗尽光阴之前
+
+You're gonna see
+
+你会发现
+
+That someday we'll be all that we need
+
+未来的某一天 我们会成为我们想要的一切
+
+Someday we'll be all that we need
+
+未来的某一天 我们会成为我们想要的一切
+
+I've been the best, been the worst
+
+我曾做过最好的 做过最坏的
+
+Been a ghost in a crowded room (oh, yeah-yeah-yeah-yeah)
+
+在纷杂人群中 隐形一般
+
+I took a chance, took a turn, took a dive
+
+我曾孤注一掷 纵身一跃
+
+And it led to you (oh, yeah-yeah-yeah-yeah)
+
+被引到你的面前
+
+So many times that I wish we could be anywhere but here
+
+好多次曾渴望我们在别处相遇
+
+So many times that I wish I could see what you see so clear, so clear
+
+好多次 希望我能够看清 你所看清的
+
+Oh, you say someday when we're older
+
+你说 当未来的某一天 我们老去
+
+We'll be shinin' like we're gold, yeah
+
+我们会像金子一样闪耀
+
+Won't we? (Won't we?)
+
+不是吗？
+
+Won't we? (Won't we?)
+
+不是吗？
+
+Yeah, someday when we're older
+
+未来的某一天 我们老去
+
+I'll be yours, and you'll be mine
+
+我们将心比心
+
+Be happy (happy)
+
+无忧无虑
+
+Happy
+
+无忧无虑
+
+Oh, you say someday when we're older
+
+噢 你说 未来的某一天 我们老去
+
+We won't worry 'bout the things that We don't need (we don't need)
+
+我们不再担心身外之物
+
+We don't need
+
+身外之物
+
+Yeah, one day down the line
+
+某天 当那一刻来临
+
+Before we both run out of time
+
+在我们耗尽光阴之前
+
+You're gonna see
+
+你会发现
+
+That someday we'll be all that we need
+
+未来的某一天 我们会成为我们想要的一切
+
+Someday we'll be all that we need
+
+未来的某一天 我们会成为我们想要的一切
+
+Oh, you say someday when we're older
+
+你说 当未来的某一天 我们老去
+
+We'll be shinin' like we're gold, yeah
+
+我们会像金子一样闪耀
+
+Won't we?
+
+不是吗？
+
+Won't we?
+
+不是吗？
+
+Mmh, someday down the line
+
+某天 当那一刻来临
+
+Before we both run out of time
+
+在我们耗尽光阴之前
+
+You're gonna see
+
+你会发现
+
+That someday we'll be all that we need
+
+未来的某一天 我们会成为我们想要的一切
+
+### <a name="sx2"></a> 歌曲赏析
+
+不论是前奏吉他，还是副歌键盘，全曲洋溢着温馨欢乐的氛围，冀希着未来的美好。
+
+当一个人渐渐老去，也历经了人生百态，往往能看淡一切，不再为身不由己的事物烦恼。
+
+"Someday We'll be al that we need."
