--- a/_pages/singles.html
+++ b/_pages/singles.html
@@ -476,7 +476,7 @@ We're walking the wire, wire, wire
 这一段翻译是我自己加上去的。其意就是：在克服了诸多困难险阻后，双方仍能够保留爱情初始的芳心，但困难毕竟是循环轮回，因此爱情就是在无数个起点之间反复徘徊的旅程，每一次都会回到“一切的起点”。
 
 
-## <a name="cc3"></a> Walking the Wire-Imagine Dragons 2017
+## <a name="cc3"></a> Instant Crush - Daft Punk 2013
 
 ![alt jpg](..\assets\img\instantcrush.jpg)
 
@@ -862,7 +862,7 @@ So I chained myself to a friend
 
 因为我知道情感束缚会因此而解开
 
-## <a name="sx1"></a> 歌曲赏析
+### <a name="sx1"></a> 歌曲赏析
 
 此歌的人声是Julian Casablancas。他是英伦摇滚乐队The Strokes的主唱，也参与了此曲的词曲创作。
 
