--- a/_pages/singles.html
+++ b/_pages/singles.html
@@ -22,11 +22,21 @@ permalink: /singles/
 
 另：第五张专辑《MERCURY ACT 1》将于9月3日定点投放，大家一定要Follow一下！
 
-Lyric MY on Youtube:
+MY on Youtube:
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/4mJayYlfcWo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Y2NkuFIlLEo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-歌曲翻译：（Translated by Alex 2021.07.02）
+MV on Bilibili:
+
+<iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=716451097&bvid=BV1cX4y1w7GK&cid=362988545&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+速览歌词：
+
+<div><iframe src="//www.musixmatch.com/lyrics/Imagine-Dragons/Wrecked/embed?theme=light" style="border:none;background:transparent;" width="100%" height="380" border=0></iframe><a href="https://www.musixmatch.com/lyrics/Imagine-Dragons/Wrecked">View Wrecked Lyrics by Imagine Dragons</a> at <a href="https://www.musixmatch.com/">Musixmatch</a></div>
+
+自制翻译：
+
+（Translated by Alex 2021.07.02）
 
 Days pass by and my eyes stay dry, and I think that I'm okay
 
@@ -282,6 +292,10 @@ Audio on Bilibili:
 
 <iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=13336700&bvid=BV1sx411H7dX&cid=21858789&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
+速览歌词：
+
+<div><iframe src="//www.musixmatch.com/lyrics/Imagine-Dragons/Walking-the-Wire/embed?theme=light" style="border:none;background:transparent;" width="100%" height="380" border=0></iframe><a href="https://www.musixmatch.com/lyrics/Imagine-Dragons/Walking-the-Wire">View Walking the Wire Lyrics by Imagine Dragons</a> at <a href="https://www.musixmatch.com/">Musixmatch</a></div>
+
 歌词翻译：（Translate by Alex 2021.7.23）
 
 Do you feel the same when I'm away from you?
@@ -495,6 +509,10 @@ MV on Youtube:
 MV on Bilibili:
 
 <iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=80325673&bvid=BV1SJ411s7WG&cid=137462354&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+速览歌词：
+
+<div><iframe src="//www.musixmatch.com/lyrics/Daft-Punk/Instant-Crush/embed?theme=light" style="border:none;background:transparent;" width="100%" height="380" border=0></iframe><a href="https://www.musixmatch.com/lyrics/Daft-Punk/Instant-Crush">View Instant Crush Lyrics by Daft Punk</a> at <a href="https://www.musixmatch.com/">Musixmatch</a></div>
 
 歌词自制翻译：（几句借鉴了网易云的翻译）
 
@@ -885,7 +903,11 @@ MV on Bilibili:
 
 <iframe width="560" height="315" src="//player.bilibili.com/player.html?aid=590160235&bvid=BV1sq4y1U7QP&cid=398281280&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-歌词翻译：
+速览歌词：
+
+<div><iframe src="//www.musixmatch.com/lyrics/OneRepublic/Track-3/embed?theme=light" style="border:none;background:transparent;" width="100%" height="380" border=0></iframe><a href="https://www.musixmatch.com/lyrics/OneRepublic/Track-3">View Someday Lyrics by OneRepublic</a> at <a href="https://www.musixmatch.com/">Musixmatch</a></div>
+
+自制翻译：
 
 [跳至赏析](#sx2)
 
