--- a/_pages/Summary.html
+++ b/_pages/Summary.html
@@ -1,6 +1,6 @@
 ---
 layout: post
 title: Check please
-permalink: about
+permalink: /Summary/
 ---
-This website is created by Alex, bitches!
+Come and watch Check Please! Give us your money!
