--- a/_pages/Details.html
+++ b/_pages/Details.html
@@ -3,4 +3,5 @@ layout: post
 title: Details
 permalink: /Details/
 ---
-Come and watch Check Please!
+The cast and student directors have worked hard to bring this production to life and after endless amounts of practice, Studio 74 is ready to present Check, Please! for all of you to see! If you want to feel more single than ever, come see our play!
+Check, Please! is a romantic comedy written by Jonathan Rand and published by Playscripts Inc. about a guy (Alexander Lopez) and a girl (Sarasvati Bhat) going on a series of bad dates looking for the perfect person. How would you feel if your date was a mime, or if they spent the whole date giving a full powerpoint presentation about their life? And what would you do if a young child showed up instead of the adult that you expected? The characters experience exactly that, so come and see what happens this Friday!
