--- a/_pages/Summary.html
+++ b/_pages/Summary.html
@@ -3,4 +3,4 @@ layout: post
 title: Check please
 permalink: /Summary/
 ---
-Come and watch Check Please! Give us your money!
+Check, Please! is going to be performed in Lynbrook, Studio 74 at February 18th 7:30 - 8:30 PM. Tickets are sold in the quad during lunch from February 14 - 18 for $5 each!
